--- a/maquette/html/media_visualisation.html
+++ b/maquette/html/media_visualisation.html
@@ -3,11 +3,10 @@
 	<head>
 		<title></title>
 		
-		<link rel="stylesheet" href="/bootstrap/bootstrap-3.3.6-dist/css/booststrap.css">
-		
-		<script src="/js/jquery-3.0.0.js"></script>
-  		<script src="/bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-  		<script src="/js/underscore.js"></script>
+		<script src="../js/jquery-2.1.4.js"></script>
+		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
+  		<script src="../bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+  		<script src="../js/underscore.js"></script>
 	</head>
 	
 	<body>
