commit de la navigation dans le header

--- a/maquette/html/media_creation.html
+++ b/maquette/html/media_creation.html
@@ -11,9 +11,43 @@
 	
 	<body>
 		<header>
-			<div></div>
-			
-			<nav></nav>
+			<div>
+				<div >
+					<nav>
+						<ul>
+				  			<li>
+				  				<a href="home.html">M&eacute;dia</a>
+				  			</li>
+				 			<li>
+				 				<a href="adherent_recherche.html">Adh&eacute;rents</a>
+				 			</li>
+						</ul>
+					</nav>
+				</div>
+				<div>
+						<ul>
+				  			<li>
+				  				<a href="home.html">Logo</a>
+				  			</li>
+				 			<li>
+				 				<a href="login.html">D&eacute;connection</a>
+				 			</li>
+						</ul>
+				</div>
+				<div>
+					<nav>
+						<ul>
+				  			<li>
+				  				<a href="home.html">Recherche</a>
+				  			</li>
+				 			<li>
+				 				<a href="media_creation.html">Nouveau</a>
+				 			</li>
+						</ul>
+					</nav>
+							
+				</div>
+			</div>
 		</header>
 		
 		<div>
