creation de la page home

--- a/maquette/html/home.html
+++ b/maquette/html/home.html
@@ -17,7 +17,29 @@
 			<nav></nav>
 		</header>
 		
-		<div></div>
+		<div> 		
+			<label>Titre:</label> <input type="text"> 
+			<label>Auteur:</label> <input type="text"> 
+			<label>Type:</label>
+				<select>
+					<option selected disabled>Selectionner un type</option>
+					<option>Livre</option>
+					<option>CD</option>
+					<option>DVD</option>
+				</select>
+			<button type="bouton">Recherche</button>
+		</div>
+		
+		<table>
+			<tr>
+				<td>Titre</td>
+				<td>Type</td>
+				<td>Auteur</td>
+				<td>Emprunteur</td>
+				<td>Date retour</td>
+			</tr>
+		</table>
+		
 		
 		<footer>
 			<div></div>
