--- a/maquette/html/media_visualisation.html
+++ b/maquette/html/media_visualisation.html
@@ -50,7 +50,95 @@
 			</div>
 		</header>
 		
-		<div></div>
+		<div class="col-md-12">
+			<div class="form-group row">
+				<label class="col-md-2">Titre</label>
+				<label class="col-md-4">Ex_Titre</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Type</label>
+				<label class="col-md-4">Ex_Type</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Auteur</label>
+				<label class="col-md-4">Ex_Auteur</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Emprunt&eacute;</label>
+				<label class="col-md-4">par Ex_Nom_Emprunteur</label>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Date de retour</label>
+				<div class="col-md-4"><input type="date" readonly></div>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-2">Nom de l'Emprunteur</label>
+				<label class="col-md-2">Ex_Nom_Emprunteur</label>
+				<label class="col-md-1">Date</label>
+				<div class="col-md-2">
+					<input type="date">
+				</div>
+				<input class="active" type="submit" value="Ajouter">
+			</div>
+			<div class="form-group col-md-12">
+				<label>Dernier Emprunteur</label>
+				<br>
+				<table class="bs-example col-md-6">
+					<thead>
+						<tr>
+							<th>Identifiant Emprunteur
+							</th>
+							<th>Nom Emprunteur
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Ex_Id_Emprunteur1</td>
+							<td>Ex_Nom_Emprunteur1</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur2</td>
+							<td>Ex_Nom_Emprunteur2</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur3</td>
+							<td>Ex_Nom_Emprunteur3</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur4</td>
+							<td>Ex_Nom_Emprunteur4</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur5</td>
+							<td>Ex_Nom_Emprunteur5</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur6</td>
+							<td>Ex_Nom_Emprunteur6</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur7</td>
+							<td>Ex_Nom_Emprunteur7</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur8</td>
+							<td>Ex_Nom_Emprunteur8</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur9</td>
+							<td>Ex_Nom_Emprunteur9</td>
+						</tr>
+						<tr>
+							<td>Ex_Id_Emprunteur10</td>
+							<td>Ex_Nom_Emprunteur10</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			
+			<div class="col-md-6 col-md-offset-3"><input class="active" type="submit" value="Modifier"></div>
+		</div>
 		
 		<footer>
 			<div></div>
