--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Visualisation d'un M&eacute;dia</title>
+		<div class="col-xs-12">
+			<h1 class="col-xs-6 col-xs-offset-3">Visualisation d'un M&eacute;dia</h1>
+		</div>
 		
 		<script src="../js/jquery-2.1.4.js"></script>
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
@@ -51,31 +54,31 @@
 		</header>
 		
 		<div>
-			<div class="col-md-12" style="border:1px red dashed;">
-				<div class="form-group row">
-					<label class="col-md-2">Titre</label>
-					<p class="col-md-4">Ex_Titre</p>
+			<div class="col-xs-8 col-xs-offset-2" style="border:1px red dashed;">
+				<div class="form-group col-xs-12">
+					<label class="col-xs-4">Titre</label>
+					<p class="col-xs-8">Ex_Titre</p>
 				</div>
-				<div class="form-group row">
-					<label class="col-md-2">Type</label>
-					<p class="col-md-4">Ex_Type</p>
+				<div class="form-group col-xs-12">
+					<label class="col-xs-4">Type</label>
+					<p class="col-xs-8">Ex_Type</p>
 				</div>
-				<div class="form-group row">
-					<label class="col-md-2">Auteur</label>
-					<p class="col-md-4">Ex_Auteur</p>
+				<div class="form-group col-xs-12">
+					<label class="col-xs-4">Auteur</label>
+					<p class="col-xs-8">Ex_Auteur</p>
 				</div>
-				<div class="form-group row">
-					<label class="col-md-2">Emprunt&eacute;</label>
-					<p class="col-md-4">par Ex_Nom_Emprunteur</p>
+				<div class="form-group col-xs-12">
+					<label class="col-xs-4">Emprunt&eacute;</label>
+					<p class="col-xs-8">par Ex_Nom_Emprunteur</p>
 				</div>
-				<div class="form-group row">
-					<label class="col-md-2">Date de retour</label>
-					<div class="col-md-4"><input type="date" readonly></div>
+				<div class="form-group col-xs-12">
+					<label class="col-xs-4">Date de retour</label>
+					<div class="col-xs-8"><input type="date" readonly></div>
 				</div>
-				<div class="form-group col-md-12">
+				<div class="form-group col-xs-10 col-xs-offset-1">
 					<label>Dernier Emprunteur</label>
 					<br>
-					<table class="bs-example col-md-6">
+					<table class="bs-example col-xs-12">
 						<thead>
 							<tr>
 								<th>Identifiant Emprunteur
@@ -129,7 +132,12 @@
 					</table>
 				</div>
 			</div>
-			<div class="col-md-6 col-md-offset-3"><input class="active" type="submit" value="Modifier" readonly></div>
+			
+			<div class="col-xs-2 col-xs-offset-5">
+				<form action="#" method="GET">
+					<input class="active" type="submit" value="Modifier" readonly>
+				</form>
+			</div>
 		</div>
 		
 		<footer>
