--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -7,9 +7,11 @@
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
   		<script src="../bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   		<script src="../js/underscore.js"></script>
+  		<link rel="stylesheet" href="../css/style_headerfooter.css">
 	</head>
 	
 	<body>
+		<div class="container">	
 		<header>
 			<div></div>
 			
@@ -21,5 +23,6 @@
 		<footer>
 			<div></div>
 		</footer>
+		</div>
 	</body>
 </html>
