--- a/maquette/html/adherent_creation.html
+++ b/maquette/html/adherent_creation.html
@@ -12,8 +12,7 @@
   		<link rel="stylesheet" href="../css/style_headerfooter.css">
 	</head>
 	
-	<body>
-<div class="container">	
+	<body class="container">
 		<header >
 			<div class="navbar  navbar-default container-fluid ">
 				<div class="row">
@@ -137,6 +136,5 @@
 				
 			</div>
 		</footer>
-</div>
 	</body>
 </html>
