--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -12,8 +12,7 @@
   		
 	</head>
 	
-	<body>
-		<div class="container">	
+	<body class="container">
 			<header >
 					<div class="navbar  navbar-default container-fluid ">
 						<div class="row">
@@ -104,6 +103,5 @@
 					
 				</div>
 			</footer>
-		</div>
 	</body>
 </html>
