--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -10,19 +10,25 @@
   		<link rel="stylesheet" href="../css/style_headerfooter.css">
 	</head>
 	
-	<body>
-		<div class="container">	
+	<body class="container">
+		
 		<header>
-			<div></div>
 			
-			<nav></nav>
 		</header>
 		
-		<div></div>
+		<div class="row">
+		<div class="col-xs-2 col-xs-offset-5">
+			<a href="home.html" ><img class="img-responsive center-block"  src="../src/img/logo.png"/></a>
+		</div>
+		</div>
+		
 		
 		<footer>
-			<div></div>
+			 <div class="panel-footer pull-right label-primary">
+				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
+				
+			</div>
 		</footer>
-		</div>
+		
 	</body>
 </html>
