--- a/maquette/html/adherent_creation.html
+++ b/maquette/html/adherent_creation.html
@@ -130,11 +130,8 @@
 			</form>
 		</div>
 		
-		<footer>
-			 <div class="panel-footer pull-right label-primary">
-				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-				
-			</div>
+		<footer class="panel-footer marge-footer">
+			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
 		</footer>
 	</body>
 </html>
