--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -97,11 +97,8 @@
 				</tbody>
 			</table>
 		
-			<footer>
-				 <div class="panel-footer pull-right label-primary">
-					Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-					
-				</div>
+			<footer class="panel-footer marge-footer">
+			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
 			</footer>
 	</body>
 </html>
