--- a/maquette/html/adherent_visualisation.html
+++ b/maquette/html/adherent_visualisation.html
@@ -165,8 +165,8 @@
 			</div>
 		</div>
 		
-		<footer>
-			<div></div>
+		<footer class="panel-footer marge-footer">
+			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
 		</footer>
 	</body>
 </html>
