commit ajout de lien visualisation a partir de recherche

--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -102,6 +102,7 @@
 						<td>07/07/2016</td>
 						<td>oui</td>
 						<td>Media1, Media2</td>
+						<td><a href="adherent_visualisation.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 					</tr>
 					<tr class="row" id="2">
 						<td>id2</td>
@@ -109,6 +110,7 @@
 						<td>07/07/2016</td>
 						<td>non</td>
 						<td>Media3, Media4</td>
+						<td><a href="adherent_visualisation.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 					</tr>
 				</tbody>
 			</table>
