--- a/maquette/html/home.html
+++ b/maquette/html/home.html
@@ -107,8 +107,9 @@
 						<td>Titre1</td>
 						<td>CD</td>
 						<td>Auteur1</td>
-						<td>Nom1</td>
+						<td>Libre</td>
 						<td>07/07/2016</td>
+						<td><a href="media_visualisation.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 					</tr>
 					<tr class="row">
 						<td>Titre2</td>
@@ -116,6 +117,7 @@
 						<td>Auteur2</td>
 						<td>Nom2</td>
 						<td>07/07/2016</td>
+						<td><a href="media_visualisation2.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 					</tr>	
 					<tr class="row">
 						<td>Titre3</td>
@@ -123,6 +125,7 @@
 						<td>Auteur3</td>
 						<td>Nom3</td>
 						<td>07/07/2016</td>
+						<td><a href="media_visualisation2.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 					</tr>				
 				</tbody>
 				
