--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -2,9 +2,6 @@
 <html>
 	<head>
 		<title>Fiche M&eacute;dia</title>
-		<div class="col-xs-12">
-			<h1 class="col-xs-5 col-xs-offset-4">Fiche M&eacute;dia</h1>
-		</div>
 		
 		<script src="../js/jquery-2.1.4.js"></script>
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
@@ -64,28 +61,33 @@
 						</div>
 					</div>
 				</header>
+				
+			<div class="row">
+				<h1 class="col-xs-5 col-xs-offset-4">Fiche M&eacute;dia</h1>
+			</div>
+			
 			<br>
-		
-			<div class="col-xs-8 col-xs-offset-2 padding15 up-down-space border-red">
+			
+			<div class="col-xs-10 col-xs-offset-1 padding15 up-down-space border-red">
 				<div class="form-group col-xs-12">
-					<label class="col-xs-4">Titre</label>
-					<p class="col-xs-8">Ex_Titre</p>
+					<label class="col-xs-5 col-ld-4">Titre</label>
+					<p class="col-xs-7 col-ld-8">Ex_Titre</p>
 				</div>
 				<div class="form-group col-xs-12">
-					<label class="col-xs-4">Type</label>
-					<p class="col-xs-8">Ex_Type</p>
+					<label class="col-xs-5 col-ld-4">Type</label>
+					<p class="col-xs-7 col-ld-8">Ex_Type</p>
 				</div>
 				<div class="form-group col-xs-12">
-					<label class="col-xs-4">Auteur</label>
-					<p class="col-xs-8">Ex_Auteur</p>
+					<label class="col-xs-5 col-ld-4">Auteur</label>
+					<p class="col-xs-7 col-ld-8">Ex_Auteur</p>
 				</div>
 				<div class="form-group col-xs-12">
-					<label class="col-xs-4">Emprunt&eacute;</label>
-					<p class="col-xs-8">par Ex_Nom_Emprunteur</p>
+					<label class="col-xs-5 col-ld-4">Emprunt&eacute;</label>
+					<p class="col-xs-7 col-ld-8">par Ex_Nom_Emprunteur</p>
 				</div>
 				<div class="form-group col-xs-12">
-					<label class="col-xs-4">Date de retour</label>
-					<p class="col-xs-8">Ex_Date_Retour</p>
+					<label class="col-xs-5 col-ld-4">Date de retour</label>
+					<p class="col-xs-7 col-ld-8">Ex_Date_Retour</p>
 				</div>
 				<div class="form-group col-xs-10 col-xs-offset-1">
 					<label>Dernier Emprunteur</label>
@@ -95,57 +97,137 @@
 							<tr>
 								<th>Identifiant Emprunteur
 								</th>
-								<th>Nom Emprunteur
+								<th class="hidden-xs">Nom Emprunteur
 								</th>
 							</tr>
 						</thead>
 						<tbody class="bg-danger">
 							<tr>
-								<td>Ex_Id_Emprunteur1</td>
-								<td>Ex_Nom_Emprunteur1</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur1
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur1
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur2</td>
-								<td>Ex_Nom_Emprunteur2</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur2
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur2
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur3</td>
-								<td>Ex_Nom_Emprunteur3</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur3
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur3
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur4</td>
-								<td>Ex_Nom_Emprunteur4</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur4
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur4
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur5</td>
-								<td>Ex_Nom_Emprunteur5</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur5
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur5
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur6</td>
-								<td>Ex_Nom_Emprunteur6</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur6
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur6
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur7</td>
-								<td>Ex_Nom_Emprunteur7</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur7
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur7
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur8</td>
-								<td>Ex_Nom_Emprunteur8</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur8
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur8
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur9</td>
-								<td>Ex_Nom_Emprunteur9</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur9
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur9
+									</a>
+								</td>
 							</tr>
 							<tr>
-								<td>Ex_Id_Emprunteur10</td>
-								<td>Ex_Nom_Emprunteur10</td>
+								<td>
+									<a href="adherent_visualisation.html">
+										Ex_Id_Emprunteur10
+									</a>
+								</td>
+								<td class="hidden-xs">
+									<a href="adherent_visualisation.html">
+										Ex_Nom_Emprunteur10
+									</a>
+								</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
 			</div>
 			
-			<div class="col-md-2 col-md-offset-5 up-down-space">
+			<div class="col-xs-2 col-xs-offset-5 up-down-space">
 				<form action="#" method="GET">
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
