--- a/maquette/html/home.html
+++ b/maquette/html/home.html
@@ -93,7 +93,7 @@
 				</form>
 			</div>
 			<br>
-			<table class="table table-bordered table-striped" id="result" style="display:none">
+			<table class="table table-bordered table-hover" id="result" style="display:none">
 				<thead>
 					<tr class="row warning">
 						<th class="col-xs-4" id="titre"><a onClick="tri()">Titre</a></th>
