--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -86,7 +86,7 @@
 				</form>
 			</div>
 			<br>
-			<table class="table table-bordered table-striped" id="result" style="display:none">
+			<table class="table table-bordered table-hover" id="result" style="display:none">
 				<thead>
 					<tr class="row warning">
 						<th class="col-xs-2" id="Identifiant"><a onClick="tri()">Identifiant</a></th>
