Correction de bug mineur

--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -13,14 +13,13 @@
 	<body class="container">
 		
 		<header class="marge-top-login">
-			
 		</header>
 		
 		<div class="row">
 			<div class="col-xs-4 col-xs-offset-5">
 				<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
 			</div>
-		</div>
+		</div><br>
 		<div class="col-xs-6 col-xs-offset-3">
 			<fieldset>
 				<form class="form-horizontal" action="home.html">
@@ -48,7 +47,6 @@
 				</form>
 			</fieldset>
 		</div>
-		
 		
 		<footer class="panel-footer marge-footer">
 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
