--- a/maquette/html/media_visualisation.html
+++ b/maquette/html/media_visualisation.html
@@ -7,59 +7,48 @@
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
   		<script src="../bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   		<script src="../js/underscore.js"></script>
-  		<style>
-  			.up-down-space{
-  				margin-top:20px;
-  				margin-bottom:20px;
-  			}
-  			.padding15{
-  				padding:20px 20px 20px 20px;
-  			}
-  			.border-red{
-  				border:1px dashed red;
-  				border-radius:5px;
-  			}
-  		</style>
+  		
+  		<link rel="stylesheet" href="../css/style.css">
 	</head>
 	
 	<body>
 		<div class="container">	
 			<header >
-					<div class="navbar  navbar-default container-fluid ">
-						<div class="row">
-							<div class="col-xs-10">
-								<ul class="nav nav-pills nav-justified marge-top-menu ">
-						  			<li>
-						  				<a href="home.html">M&eacute;dia</a>
-						  			</li>
-						 			<li class="bg-info">
-						 				<a href="adherent_recherche.html">Adh&eacute;rents</a>
-						 			</li>
-								</ul>
-							</div >
-							<div class="col-xs-2">
-						  		<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-5 ">
-								<ul class="nav nav-pills nav-justified ">
-						  			<li>
-						  				<a href="home.html">Recherche</a>
-						  			</li>
-						 			<li role="media_creation" class="bg-info" >
-						 				<a href="adherent_creation.html" >Nouveau</a>
-						 			</li>
-								</ul>
-							</div>
-							<div class="col-xs-2 col-xs-offset-5 marge-top-deco center"  >
-								<a type="button" class="btn btn-default btn-block btm-sm" href="login.html">
-									<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-								</a>
-						 	</div>
+				<div class="navbar  navbar-default container-fluid ">
+					<div class="row">
+						<div class="col-xs-10">
+							<ul class="nav nav-pills nav-justified marge-top-menu ">
+					  			<li>
+					  				<a href="home.html">M&eacute;dia</a>
+					  			</li>
+					 			<li class="bg-info">
+					 				<a href="adherent_recherche.html">Adh&eacute;rents</a>
+					 			</li>
+							</ul>
+						</div >
+						<div class="col-xs-2">
+					  		<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
 						</div>
 					</div>
-				</header>
+					<div class="row">
+						<div class="col-xs-5 ">
+							<ul class="nav nav-pills nav-justified ">
+					  			<li>
+					  				<a href="home.html">Recherche</a>
+					  			</li>
+					 			<li role="media_creation" class="bg-info" >
+					 				<a href="adherent_creation.html" >Nouveau</a>
+					 			</li>
+							</ul>
+						</div>
+						<div class="col-xs-2 col-xs-offset-5 marge-top-deco center"  >
+							<a type="button" class="btn btn-default btn-block btm-sm" href="login.html">
+								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+							</a>
+					 	</div>
+					</div>
+				</div>
+			</header>
 				
 			<div class="row">
 				<h1 class="col-xs-5 col-xs-offset-4">Fiche M&eacute;dia</h1>
