commit probleme avec le footer

--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -42,7 +42,7 @@
 								</ul>
 							</div >
 							<div class="col-xs-2">
-						  		<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
+						  		<a href="home.html" ><img class="img-responsive center-block img-circle border-image"  src="../src/img/logo.png"/></a>
 							</div>
 						</div>
 						<div class="row">
