--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -17,11 +17,11 @@
 		
 		<div class="row">
 			<div class="col-xs-4 col-xs-offset-5">
-				<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
+				<img class="img-responsive center-block border-image img-circle"  src="../src/img/logo.png"/>
 			</div>
-		</div><br>
-		<div class="col-xs-6 col-xs-offset-3">
-			<fieldset>
+		</div>
+		<div class="col-xs-6 col-xs-offset-3 marge-top-menu ">
+			<div class=" padding15 up-down-space border-red">
 				<form class="form-horizontal" action="home.html">
 		 			<div class="form-group" >
 						<div class="col-xs-4">
@@ -45,7 +45,7 @@
 		    			</div>
 		  			</div>
 				</form>
-			</fieldset>
+			</div>
 		</div>
 		
 		<footer class="panel-footer marge-footer">
