--- a/maquette/html/adherent_visualisation.html
+++ b/maquette/html/adherent_visualisation.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
   		<script src="../bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   		<script src="../js/underscore.js"></script>
+  		<link rel="stylesheet" href="../css/style.css">
+  		<link rel="stylesheet" href="../css/style_headerfooter.css">
   		
   		<style>
   			.up-down-space{
@@ -25,8 +27,7 @@
   		</style>
 	</head>
 	
-	<body>
-		<div class="container">	
+	<body class="container">
 			<header >
 					<div class="navbar  navbar-default container-fluid ">
 						<div class="row">
@@ -41,7 +42,7 @@
 								</ul>
 							</div >
 							<div class="col-xs-2">
-						  		<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
+						  		<a href="home.html" ><img class="img-responsive center-block img-circle border-image"  src="../src/img/logo.png"/></a>
 							</div>
 						</div>
 						<div class="row">
@@ -50,7 +51,7 @@
 						  			<li>
 						  				<a href="adherent_recherche.html">Recherche</a>
 						  			</li>
-						 			<li role="adherent_creation" class="bg-info" >
+						 			<li  >
 						 				<a href="adherent_creation.html" >Nouveau</a>
 						 			</li>
 								</ul>
@@ -219,9 +220,9 @@
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
 			</div>
-		</div>
 		
-		<footer class="panel-footer marge-footer">
+		
+		<footer class=" marge-footer">
 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
 		</footer>
 	</body>
