--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -7,38 +7,26 @@
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
   		<script src="../bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
   		<script src="../js/underscore.js"></script>
-  		<style>
-  			.up-down-space{
-  				margin-top:20px;
-  				margin-bottom:20px;
-  			}
-  			.padding15{
-  				padding:20px 20px 20px 20px;
-  			}
-  			.border-red{
-  				border:1px dashed red;
-  				border-radius:5px;
-  			}
-  		</style>
+   		<link rel="stylesheet" href="../css/style.css">
+  		<link rel="stylesheet" href="../css/style_headerfooter.css">
 	</head>
 	
-	<body>
-		<div class="container">	
+	<body class="container">
 			<header >
 					<div class="navbar  navbar-default container-fluid ">
 						<div class="row">
 							<div class="col-xs-10">
 								<ul class="nav nav-pills nav-justified marge-top-menu ">
-						  			<li>
+						  			<li class="bg-info">
 						  				<a href="home.html">M&eacute;dia</a>
 						  			</li>
-						 			<li class="bg-info">
+						 			<li>
 						 				<a href="adherent_recherche.html">Adh&eacute;rents</a>
 						 			</li>
 								</ul>
 							</div >
 							<div class="col-xs-2">
-						  		<a href="home.html" ><img class="img-responsive center-block border-image"  src="../src/img/logo.png"/></a>
+						  		<a href="home.html" ><img class="img-responsive center-block img-circle border-image"  src="../src/img/logo.png"/></a>
 							</div>
 						</div>
 						<div class="row">
@@ -231,7 +219,7 @@
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
 			</div>
-		</div>
+	
 		
 		<footer class="panel-footer marge-footer">
 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
