commit de update links avec visualisation

--- a/maquette/html/adherent_creation.html
+++ b/maquette/html/adherent_creation.html
@@ -63,19 +63,19 @@
 				<div class="form-group">
 					<label for="inputNom" class="col-xs-2 control-label">Nom* :</label>
 					<div class="col-sm-3">
-						<input type="text" class="form-control" id="inputNom">
+						<input type="text" class="form-control" id="inputNom" required>
 					</div>
 					
 					<label for="inputNom" class="col-xs-offset-1 col-xs-2 control-label">Prenom* :</label>
 					<div class="col-sm-3">
-						<input type="text" class="form-control" id="inputPrenom">
+						<input type="text" class="form-control" id="inputPrenom" required>
 					</div>
 				</div><br>
 
 				<div class="form-group">
 					<label class="col-xs-2 control-label">Date de naissance* :</label>
 					<div class="col-sm-3">
-						<input type="date" class="form-control">
+						<input type="date" class="form-control" required>
 					</div>
 									
 					<label class="col-xs-offset-1 col-xs-3 control-label">Age : 42 ans</label>
@@ -84,12 +84,12 @@
 				<div class="form-group">
 					<label for="inputEmail3" class="col-xs-2 control-label">Email* :</label>
 					<div class="col-sm-9">
-						<input type="email" class="form-control" id="inputEmail3">
+						<input type="email" class="form-control" id="inputEmail3" required>
 					</div>
 				</div>
 
 				<div class="form-group">
-					<label class="col-xs-2 control-label">Adresse* :</label>
+					<label class="col-xs-2 control-label">Adresse :</label>
 					<div class="col-md-9">
 						<input type="text" class="form-control">
 					</div>
