--- a/maquette/html/adherent_visualisation.html
+++ b/maquette/html/adherent_visualisation.html
@@ -202,7 +202,7 @@
 			</div>
 			
 			<div class="col-xs-2 col-xs-offset-5 up-down-space">
-				<form action="#" method="GET">
+				<form action="adherent_update.html" method="GET">
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
 			</div>
