--- a/maquette/html/media_update.html
+++ b/maquette/html/media_update.html
@@ -14,40 +14,41 @@
 	
 	<body class="container">
 		<header >
-			<div class="navbar  navbar-default container-fluid ">
-				<div class="row">
-					<div class="col-xs-10">
-						<ul class="nav nav-pills nav-justified marge-top-menu ">
-				  			<li class="bg-info">
-				  				<a href="home.html">M&eacute;dia</a>
-				  			</li>
-				 			<li>
-				 				<a href="adherent_recherche.html" >Adh&eacute;rents</a>
-				 			</li>
-						</ul>
-					</div >
-					
-					<div class="col-xs-2">
-				  		<a href="home.html" ><img class="img-responsive center-block"  src="../src/img/logo.png"/></a>
+				<div class="navbar  navbar-default container-fluid ">
+					<div class="row">
+						<div class="col-xs-10">
+							<ul class="nav nav-pills nav-justified marge-top-menu ">
+					  			<li class="bg-info">
+					  				<a href="home.html">M&eacute;dia</a>
+					  			</li>
+					 			<li >
+					 				<a href="adherent_recherche.html">Adh&eacute;rents</a>
+					 			</li>
+							</ul>
+						</div >
+						<div class="col-xs-2">
+					  		<a href="home.html" ><img class="img-responsive center-block img-circle border-image"  src="../src/img/logo.png"/></a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-5 ">
+							<ul class="nav nav-pills nav-justified ">
+					  			<li>
+					  				<a href="home.html">Recherche</a>
+					  			</li>
+					 			<li>
+					 				<a href="adherent_creation.html" >Nouveau</a>
+					 			</li>
+							</ul>
+						</div>
+						<div class="col-xs-2 col-xs-offset-5 marge-top-deco center"  >
+							<a type="button" class="btn btn-default btn-block btm-sm" href="login.html">
+								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+							</a>
+					 	</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-xs-5 ">
-						<ul class="nav nav-pills nav-justified ">
-				  			<li>
-				  				<a href="home.html">Recherche</a>
-				  			</li>
-				 			<li role="media_creation" class="bg-info" class="disabled">
-				 				<a href="adherent_creation.html" >Nouveau</a>
-				 			</li>
-						</ul>
-					</div>
-					<div class="col-xs-2 col-xs-offset-5 marge-top-deco" >
-			 			<button class="btn btn-default" role="button"  href="login.html">D&eacute;connexion</button>
-				 	</div>
-				</div>
-			</div>			
-		</header>
+			</header>
 		
 		<div class="alert alert-success" role="alert">
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
