--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -215,7 +215,7 @@
 			</div>
 			
 			<div class="col-xs-2 col-xs-offset-5 up-down-space">
-				<form action="#" method="GET">
+				<form action="media_update.html" method="GET">
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
 			</div>
