--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Fiche M&eacute;dia</title>
+		<title>Visualisation Fiche M&eacute;dia</title>
 		
 		<script src="../js/jquery-2.1.4.js"></script>
 		<link rel="stylesheet" href="../bootstrap/bootstrap-3.3.6-dist/css/bootstrap.css">
