suppression du footer

--- a/maquette/html/media_visualisation.html
+++ b/maquette/html/media_visualisation.html
@@ -229,10 +229,9 @@
 					<input class="btn btn-warning" type="submit" value="Modifier" readonly>
 				</form>
 			</div>
-
 		
-		<footer class="panel-footer marge-footer">
-			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-		</footer>
+<!-- 		<footer class="panel-footer marge-footer"> -->
+<!-- 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 		</footer> -->
 	</body>
 </html>
