--- a/maquette/html/adherent_recherche.html
+++ b/maquette/html/adherent_recherche.html
@@ -114,8 +114,8 @@
 				</tbody>
 			</table>
 	
-			<footer class="panel-footer marge-footer">
-				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-			</footer>
+<!-- 			<footer class="panel-footer marge-footer"> -->
+<!-- 				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 			</footer> -->
 	</body>
 </html>
