--- a/maquette/html/adherent_update.html
+++ b/maquette/html/adherent_update.html
@@ -133,10 +133,10 @@
 			</form>
 		</div>
 		
-		<footer>
-			 <div class="panel-footer pull-right label-primary">
-				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-			</div>
-		</footer>
+<!-- 		<footer> -->
+<!-- 			 <div class="panel-footer pull-right label-primary"> -->
+<!-- 				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 			</div> -->
+<!-- 		</footer> -->
 	</body>
 </html>
