--- a/maquette/html/home.html
+++ b/maquette/html/home.html
@@ -131,8 +131,8 @@
 				
 			</table>
 		
-			<footer class="panel-footer marge-footer">
-				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-			</footer>
+<!-- 			<footer class="panel-footer marge-footer"> -->
+<!-- 				Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 			</footer> -->
 	</body>
 </html>
