--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -48,9 +48,8 @@
 			</div>
 		</div>
 		
-		<footer class="panel-footer marge-footer">
-			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-		</footer>
-		
+<!-- 		<footer class="panel-footer marge-footer"> -->
+<!-- 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 		</footer>		 -->
 	</body>
 </html>
