--- a/maquette/html/media_creation.html
+++ b/maquette/html/media_creation.html
@@ -98,8 +98,8 @@
 			</form>
 		</div>
 		
-		<footer class="panel-footer marge-footer">
-			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-		</footer>
+<!-- 		<footer class="panel-footer marge-footer"> -->
+<!-- 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 		</footer> -->
 	</body>
 </html>
