--- a/maquette/html/media_visualisation2.html
+++ b/maquette/html/media_visualisation2.html
@@ -220,9 +220,8 @@
 				</form>
 			</div>
 	
-		
-		<footer class="panel-footer marge-footer">
-			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu
-		</footer>
+<!-- 		<footer class="panel-footer marge-footer"> -->
+<!-- 			Projet r&eacute;alis&eacute; par Aragon Romain, Bouaoud Medhi, Gaborit Jean-Marie et Themelin Mathieu -->
+<!-- 		</footer> -->
 	</body>
 </html>
