correction de probleme d'affichage mineur

--- a/maquette/html/adherent_creation.html
+++ b/maquette/html/adherent_creation.html
@@ -56,7 +56,7 @@
 			L'&eacute;l&eacute;ment a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
 		</div>
 		
-		<div>
+		<div class="col-xs-offset-1">
 			<i>* Elements obligatoire.</i><br><br>
 			
 			<form action="" method="" class="form-horizontal">			
