--- a/maquette/html/login.html
+++ b/maquette/html/login.html
@@ -16,27 +16,23 @@
 		</header>
 		
 		<div class="row">
-			<div class="col-xs-4 col-xs-offset-5">
+			<div class="col-xs-4 col-xs-offset-4">
 				<img class="img-responsive center-block border-image img-circle"  src="../src/img/logo.png"/>
 			</div>
 		</div>
-		<div class="col-xs-6 col-xs-offset-3 marge-top-menu ">
-			<div class=" padding15 up-down-space border-red">
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-2 marge-top-menu ">
 				<form class="form-horizontal" action="home.html">
 		 			<div class="form-group" >
-						<div class="col-xs-4">
-			    			<label for="inputName" class="col-xs-0 control-label" >Login</label>
-			    		</div>
-			    		<div class="col-sm-8">
-			      			<input type="text" class="form-control" id="inputName"  required>
+						
+			    		<div class="col-sm-8 col-xs-offset-4">
+			      			<input type="text" class="form-control" id="inputName" placeholder="Login" required>
 			    		</div>
 			  		</div>
 			  		<div class="form-group">
-			  			<div class="col-xs-4">
-			    			<label for="inputPassword" class="col-xs-0 control-label">Password</label>
-			    		</div>
-			    		<div class="col-xs-8">
-			      			<input type="password" class="form-control" id="inputPassword"  required>
+			  			
+			    		<div class="col-xs-8 col-xs-offset-4">
+			      			<input type="password" class="form-control" id="inputPassword" placeholder="Password"  required>
 			    		</div>
 					</div>
 					<div class="form-group">
