--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 		<script src="/bower_components/angular/angular.js"></script>
 		<script src="/bower_components/angular-route/angular-route.js"></script>
 		<script src="/js/bibliApp/bibliApp.js"></script>
+		<script src="/js/biliApp/Controllers/HomeCtrl.js"></script>
 	</head>
 	
 	<body>
