Passage pages visualisation adhérent et visualisation média en AngularJS

--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,13 @@
 		<script src="/bower_components/underscore/underscore.js"></script>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
 		
 		<script src="/js/bibliApp/bibliApp.js"></script>
 		<script src="/js/bibliApp/Controllers/HomeCtrl.js"></script>
 		<script src="/js/bibliApp/Controllers/mediaCreationCtrl.js"></script>
+		<script src="/js/bibliApp/Controllers/mediaVisualisationCtrl.js"></script>
+		<script src="/js/bibliApp/Controllers/adherentVisualisationCtrl.js"></script>
 		<script src="/js/bibliApp/Controllers/login/LoginCtrl.js"></script>
 		
 		<script src="/js/bibliApp/Services/LoginLogout/Authentification.js"></script>
