modification login et header sur toutes les pages Media

--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -19,7 +19,7 @@
 	    		</div>
 <!-- 	    		<pre>{{formLogin.login|json}}</pre> -->
 <!-- 	    		<pre>{{user|json}}</pre> -->
-	    		<div ng-messages="formLogin.login.$error" style="color:maroon">
+	    		<div class="col-sm-8 col-xs-offset-4" ng-messages="formLogin.login.$error" style="color:maroon">
  					<div ng-messages-include="html/defaultMessage.html"></div>
 				</div>
 	  		</div>
@@ -29,8 +29,7 @@
 	      					class="form-control"
 	      					name="password" 
 	      					placeholder="Password"
-	      					ng-model="password"	  
-	      					>
+	      					ng-model="password">
 	    		</div>
 	    	
 	    		
