Correction de bug sur la page de creation d'adherent

--- a/app/html/bibliApp/media/mediaCreation.html
+++ b/app/html/bibliApp/media/mediaCreation.html
@@ -1,7 +1,7 @@
 <div class="alert alert-success" role="alert" ng-show="add">
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	
-	L'&eacute;l&eacute;ment a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
+	La media {{addedTitre}} a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
 </div>
 
 <div class="col-lg-offset-4">
