Navigation terminée, début de la phase SecuriteUseAuthentification

--- a/app/html/defaultMessage.html
+++ b/app/html/defaultMessage.html
@@ -1,2 +1,3 @@
 <div ng-message="minlength">Valeur trop courte</div>
 <div ng-message="maxlength">Valeur trop longue</div>
+<div ng-message="required">*Champs obligatoire</div>
