Partie isConnected ajoutee

--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -6,7 +6,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" ng-controller="LoginCtrl">
 	<div class="col-xs-6 col-xs-offset-2 marge-top-menu ">
 		<form class="form-horizontal" ng-submit="validLogin()" name="formLogin" METHOD="POST" novalidate>
  			<div class="form-group" >
