derniere modifications isConnected, deconnexion pas terminé

--- a/app/html/header-footer/header.html
+++ b/app/html/header-footer/header.html
@@ -96,7 +96,7 @@
 			</div>
 			
 			<div class="col-xs-2  marge-top-deco center"  >
-				<a type="button" class="btn btn-default btn-block btm-sm" href="/#/login">
+				<a type="button" class="btn btn-default btn-block btm-sm" ng-submit="disconnexion()" href="/#?">
 					<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 				</a>
 		 	</div>
