ajout des cookies

--- a/app/html/header-footer/header.html
+++ b/app/html/header-footer/header.html
@@ -96,9 +96,9 @@
 			</div>
 			
 			<div class="col-xs-2  marge-top-deco center"  >
-				<a type="button" class="btn btn-default btn-block btm-sm" ng-submit="disconnexion()" href="/#?">
+				<button class="btn btn-default btn-block btm-sm" ng-click="dis()">
 					<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-				</a>
+				</button>
 		 	</div>
 		</div>
 	</div>			
