--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/bower_components/angular-messages/angular-messages.js"></script>
 		<script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+		<script src="/bower_components/angular-cookies/angular-cookies.js"></script>
 		
 		<script src="/js/bibliApp/bibliApp.js"></script>
 
@@ -38,6 +39,7 @@
 	</head>
 	
 	<body class="container" ng-controller="MainCtrl">
+	<pre>{{isConnected()}}</pre>
 		<div ng-if="isConnected()">
 			<div ng-include="'/html/header-footer/header.html'" ng-if="menu()"></div>
 			<ng-view></ng-view>
